# hp-ai

./: .env.example  .gitignore  README.md  prompts.toml  pyproject.toml  requirements.txt  testuse.py
.github/workflows/: python-test.yml
hp_ai/: __main__.py  api.py  cli.py  io.py  openai_client.py
src/: __main__.py  openai_client.py
src/api/: openai_client.py
src/hp_ai/: __main__.py  api.py  cli.py  io.py
tests/: test_api.py  test_cli.py  test_io.py  test_openai_client.py
