[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "hp-ai"
version = "0.1.0"
description = "A tool for generating quiz questions using OpenAI"
readme = "README.md"
authors = [
    { name = "Dennis Lundberg", email = "lundbergg.dev@proton.me" },
    { name = "Younes Slibi", email = "younes.sleibi2000@gmail.com" },
    { name = "Hannes Lindström", email = "hanli001@student.liu.se" },
]
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = ["openai", "python-dotenv", "openai-responses", "questionary"]

[project.urls]
"Homepage" = "https://github.com/Studycomb/hp-ai"

[project.scripts]
hp-ai = "hp_ai.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = ["ruff>=0.11.7", "pytest", "pytest-cov"]
